# tasmota-to-influxdb-cpp

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: InfluxDBProducer.hpp  TasmotaDeviceInfo.hpp
src/: InfluxDBProducer.cpp  main.cpp
